fixed text from being hidden on mobile for website builds link

--- a/styles.css
+++ b/styles.css
@@ -319,6 +319,7 @@ body {
 .no-glow {
   background-color: rgb(27, 10, 156);
   box-shadow: 0 10px 20px black ;
+  white-space: wrap;
 }
 
 
